[ADD] Voice + Update pods and tutorial

--- a/Example/RecastAI/Base.lproj/Main.storyboard
+++ b/Example/RecastAI/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,35 +19,70 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MWL-OU-tmo">
-                                <rect key="frame" x="250" y="285" width="100" height="30"/>
+                                <rect key="frame" x="225" y="285" width="150" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.70196078429999997" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="Ksw-R9-Pjd"/>
+                                    <constraint firstAttribute="width" constant="150" id="Ksw-R9-Pjd"/>
                                     <constraint firstAttribute="height" constant="30" id="XEN-jn-NDy"/>
                                     <constraint firstAttribute="width" constant="100" id="ZAD-Ke-7DG"/>
                                 </constraints>
-                                <state key="normal" title="Button">
+                                <state key="normal" title="Make Request">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="ZAD-Ke-7DG"/>
+                                    </mask>
+                                </variation>
                                 <connections>
                                     <action selector="makeRequest" destination="vXZ-lx-hvc" eventType="touchUpInside" id="KX6-pB-GHz"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XzR-fn-OHd">
-                                <rect key="frame" x="250" y="240" width="100" height="30"/>
+                                <rect key="frame" x="225" y="247" width="150" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4oX-sm-DSi">
+                                <rect key="frame" x="275" y="323" width="50" height="50"/>
+                                <color key="backgroundColor" red="1" green="0.70196078431372544" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="4BA-m9-asc"/>
+                                    <constraint firstAttribute="width" constant="50" id="Sou-Xd-3D4"/>
+                                </constraints>
+                                <state key="normal" image="micro"/>
+                                <connections>
+                                    <action selector="makeVoiceRequest" destination="vXZ-lx-hvc" eventType="touchUpInside" id="8p4-l5-BW3"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="FNJ-0f-7AF">
+                                <rect key="frame" x="20" y="381" width="560" height="211"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.38039215686274508" green="0.38039215686274508" blue="0.38039215686274508" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="XzR-fn-OHd" firstAttribute="centerX" secondItem="MWL-OU-tmo" secondAttribute="centerX" id="0cC-Fu-OEh"/>
                             <constraint firstItem="MWL-OU-tmo" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="2Zn-sa-hN4"/>
                             <constraint firstItem="MWL-OU-tmo" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="Dft-cg-L88"/>
+                            <constraint firstItem="4oX-sm-DSi" firstAttribute="top" secondItem="MWL-OU-tmo" secondAttribute="bottom" constant="8" symbolic="YES" id="Ft7-k8-qTU"/>
+                            <constraint firstItem="FNJ-0f-7AF" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="GS3-Qc-w64"/>
+                            <constraint firstItem="FNJ-0f-7AF" firstAttribute="top" secondItem="4oX-sm-DSi" secondAttribute="bottom" constant="8" symbolic="YES" id="JAf-aG-mFZ"/>
+                            <constraint firstItem="FNJ-0f-7AF" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="KAZ-pJ-uun"/>
                             <constraint firstItem="XzR-fn-OHd" firstAttribute="width" secondItem="MWL-OU-tmo" secondAttribute="width" id="Ri1-x2-Zdn"/>
+                            <constraint firstItem="XzR-fn-OHd" firstAttribute="width" secondItem="MWL-OU-tmo" secondAttribute="width" id="dyd-lB-ava"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="FNJ-0f-7AF" secondAttribute="bottom" constant="8" symbolic="YES" id="eGC-Ic-PF3"/>
+                            <constraint firstItem="4oX-sm-DSi" firstAttribute="centerX" secondItem="MWL-OU-tmo" secondAttribute="centerX" id="eo2-dU-f1V"/>
                             <constraint firstItem="XzR-fn-OHd" firstAttribute="height" secondItem="MWL-OU-tmo" secondAttribute="height" id="hp1-Kl-ddu"/>
-                            <constraint firstItem="MWL-OU-tmo" firstAttribute="top" secondItem="XzR-fn-OHd" secondAttribute="bottom" constant="15" id="ySh-nA-Q2p"/>
+                            <constraint firstItem="FNJ-0f-7AF" firstAttribute="width" secondItem="kh9-bI-dsS" secondAttribute="width" id="p18-DE-CDA"/>
+                            <constraint firstItem="MWL-OU-tmo" firstAttribute="top" secondItem="XzR-fn-OHd" secondAttribute="bottom" constant="8" symbolic="YES" id="ySh-nA-Q2p"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="FNJ-0f-7AF" secondAttribute="trailing" id="zVy-qo-gGy"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Ri1-x2-Zdn"/>
+                                <exclude reference="p18-DE-CDA"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="requestTextField" destination="XzR-fn-OHd" id="FJv-F6-f4J"/>
@@ -57,4 +93,8 @@
             <point key="canvasLocation" x="565" y="418"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="945" height="945"/>
+        <image name="micro" width="24" height="24"/>
+    </resources>
 </document>
